# pyempire

./: LICENSE  README.md  pyproject.toml
examples/: example.py
src/pyempire/: api.py  client.py
